# nyaapp

./: .gitignore  README.md  flake.nix  justfile  package-lock.json  package.json
.github/workflows/: CI.yml  release.yml
nix/: 01-localfont.patch  packages.nix
src/: package-lock.json  package.json
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/.sqlx/: query-2abf37e4b54ac73689a56401d504efee4835ba3608f5498bf5deb719301f849d.json  query-fefe6a9b4bc896e7e1f6446ada87161862d56063abcdfd5462e87f2bd2cc0d6b.json
src-tauri/capabilities/: default.json
src-tauri/src/: app_service.rs  commands.rs  lib.rs  library.rs  metadata.rs  metafile.rs  provider.rs  reader.rs  scraper.rs  settings.rs  source.rs  torrent.rs  utils.rs
src-tauri/src/metadata/: mangabaka.rs
src-tauri/src/provider/: nyaa.rs
src-tauri/src/provider/nyaa/: query_params.rs
src-tauri/src/reader/: cbz_reader.rs
src-tauri/src/scraper/: metadata.rs  source.rs
src-tauri/src/scraper/source/: nyaa.rs
src-tauri/src/source/: nyaa.rs
src-tauri/src/source/nyaa/: category.rs  query_params.rs
src-tauri/src/torrent/: rqbit_service.rs
src-tauri/tests/: e2e.rs  mangabaka_integration.rs  nyaa_integration.rs
src/app/: layout.tsx  page.tsx
src/app/browse/: layout.tsx  page.tsx
src/components/: AppSidebar.tsx  DownloadsCard.tsx  LibraryCard.tsx  LibraryDetails.tsx  PageHeader.tsx  Reader.tsx  ReaderToolbar.tsx  SourceCard.tsx  SourceSearch.tsx
src/lib/: sourceOptionsToQuery.ts  utils.ts
src/types/: LibraryEntry.ts  Metadata.ts  Page.ts  PaginationInfo.ts  SearchResult.ts  SourceInfo.ts
(+11 files in other folders)
