[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.3.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.6.2", features = [] }
tauri-plugin-log = "2"
reqwest = {version = "0.12.22", features = ["stream"] }
url = "2.5.4"
async-trait = "0.1.88"
futures = "0.3.31"
tokio = "1.46.1"
librqbit = "8.1.1"
anyhow = "1.0.98"
tempdir = "0.3.7"
scraper = "0.23.1"
chrono = "0.4.41"
regex = "1.11.1"
strum = "0.27.1"
strum_macros = "0.27.1"
